helm/etcd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: etcd
  namespace: etcd
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: etcd.sudojoss.com
    http:
      paths:
        - path: /
          backend:
            serviceName: etcd
            servicePort: 2379
  tls: 
  - secretName: sudojoss-tls
    hosts:
    - etcd.sudojoss.com
